# Anatomizer

./: .gitignore  LICENSE  LICENSE-MIT  README.md
.github/workflows/: deploy-pages.yml
crates/analyzer/: Cargo.toml
crates/analyzer/src/: compare.rs  concurrency.rs  cost.rs  debugger.rs  lib.rs  memory.rs
crates/api/: Cargo.toml
crates/api/src/: main.rs  routes.rs
crates/assembler/: Cargo.toml
crates/assembler/src/: c_asm.rs  cycles.rs  go_asm.rs  lib.rs  python_dis.rs  rust_asm.rs  sandbox.rs  x86_parse.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/parser/: Cargo.toml
crates/parser/src/: cpp.rs  go_lang.rs  lib.rs  python.rs  rust_lang.rs  typescript.rs  util.rs
crates/sandbox/: Cargo.toml
crates/sandbox/src/: config.rs  container.rs  error.rs  lib.rs  lifecycle.rs  rlimits.rs
frontend/: index.html  package-lock.json  package.json
frontend/public/: theme-init.js
frontend/src/: App.tsx  api.ts  examples.ts  highlight.ts  main.tsx  mock.ts  theme.ts  types.ts
frontend/src/components/: AIChatPanel.tsx  AsmView.tsx  CodeEditor.tsx  CompareView.tsx  ConcView.tsx  CostView.tsx  DebugView.tsx  ExamplePicker.tsx  ExecView.tsx  Icons.tsx  MemView.tsx  ViewTabs.tsx  shared.tsx
frontend/src/hooks/: useIsMobile.ts
