[package]
name = "anatomizer-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anatomizer-core = { path = "../core" }
anatomizer-parser = { path = "../parser" }
anatomizer-analyzer = { path = "../analyzer" }
anatomizer-assembler = { path = "../assembler" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
serde_json = "1"
