[package]
name = "anatomizer-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
anatomizer-core = { path = "../core" }
tree-sitter = "0.24"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-cpp = "0.23"
