[package]
name = "sandbox-rt"
version = "0.1.0"
edition = "2021"
description = "Minimal Linux sandbox container with lifecycle control"

[dependencies]
nix = { version = "0.29", features = [
    "process", "signal", "resource", "sched", "mount", "fs", "user", "hostname",
] }
libc = "0.2"
tempfile = "3"
thiserror = "2"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
